Calculate content card width to fix weird rendering for once and for all on mobile devices

--- a/web/style.css
+++ b/web/style.css
@@ -83,7 +83,7 @@ h1, h2, h3, h4, h5, h6, h7 {
 
 #content .card {
 	display: inline-block;
-	width: 100%;
+	width: calc(100% - 16px);
 }
 
 #content p {
